minor styles fix

--- a/index.html
+++ b/index.html
@@ -481,16 +481,16 @@
             </ul>
           </div>
 
-          <div class="grid group self-center">
+          <div class="grid group self-center justify-center">
             <img
               loading="lazy"
-              class="rounded col-span-full row-span-full place-self-center object-cover [@media(hover:hover)]:grayscale group-hover:grayscale-0 transition-all w-full max-w-xs mx-auto"
+              class="rounded col-span-full row-span-full place-self-center object-cover group-hover:grayscale-0 transition-all w-full max-w-xs mx-auto"
               src="./images/shum_ava.webp"
               alt="Egor's Photo"
             />
 
             <div
-              class="bg-bkgSecondary z-0 col-span-full row-span-full self-end p-2 mx-2 px-8 flex items-center justify-center w-72 sm:w-auto justify-self-center"
+              class="bg-bkgSecondary z-0 col-span-full row-span-full self-end p-3 mx-4 max-w-[300px] flex items-center justify-self-stretch justify-center"
             >
               <div title="Current Location">
                 <svg height="30" width="30" title="Current Location">
