--- a/index.html
+++ b/index.html
@@ -8,12 +8,41 @@
       href="./images/shum-logo-1.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Shumanskii Egor | Web Developer & Mentor</title>
     <meta
       name="description"
       content="Web Development and Audit for Frontend Applications"
     />
 
+    <meta
+      property="og:title"
+      content="Shumanskii Egor | Web Developer & Mentor"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shum.dev/" />
+    <meta
+      property="og:image"
+      content="https://shum.dev/assets/og-shum-dev.png"
+    />
+    <meta
+      property="og:description"
+      content="Web Development and Audit for Frontend Applications"
+    />
+
+    <meta
+      name="twitter:title"
+      content="Shumanskii Egor | Web Developer & Mentor"
+    />
+    <meta
+      name="twitter:description"
+      content="Web Development and Audit for Frontend Applications"
+    />
+    <meta
+      name="twitter:image"
+      content="https://shum.dev/assets/og-shum-dev.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <!-- Fonts -->
     <link
       rel="preload"
