--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       content="Web Development and Audit for Frontend Applications"
     />
 
+    <meta property="og:site_name" content="Egor Shumanskii | Personal website" />
     <meta
       property="og:title"
       content="Shumanskii Egor | Web Developer & Mentor"
@@ -42,7 +43,9 @@
       name="twitter:image"
       content="https://shum.dev/assets/og-shum-dev.png"
     />
+    <meta name="twitter:image:alt" content="Welcome screen of Egor's website" />
     <meta name="twitter:card" content="summary_large_image" />
+
     <!-- Fonts -->
     <link
       rel="preload"
