fix meta site_name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="Web Development and Audit for Frontend Applications"
     />
 
-    <meta property="og:site_name" content="Egor Shumanskii | Personal website" />
+    <meta property="og:site_name" content="Shumanskii Egor" />
     <meta
       property="og:title"
       content="Shumanskii Egor | Web Developer & Mentor"
