FIx content jump caused by non-fixed image height

--- a/index.html
+++ b/index.html
@@ -514,12 +514,16 @@
           </div>
 
           <div class="grid group self-center justify-center">
-            <img
-              loading="lazy"
-              class="rounded col-span-full row-span-full place-self-center object-cover group-hover:grayscale-0 transition-all w-full max-w-xs mx-auto"
-              src="./images/shum_ava.webp"
-              alt="Egor's Photo"
-            />
+            <div
+              class="min-h-[292px] col-span-full row-span-full place-self-center"
+            >
+              <img
+                loading="lazy"
+                class="rounded object-cover w-full max-w-xs mx-auto"
+                src="./images/shum_ava.webp"
+                alt="Egor's Photo"
+              />
+            </div>
 
             <div
               class="bg-bkgSecondary z-0 col-span-full row-span-full self-end p-3 mx-4 max-w-[300px] flex items-center justify-self-stretch justify-center"
