simplify the css for LR animation using css variables

--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
               <li
                 title="Github"
                 class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                style="--order-lr: 0"
               >
                 <a
                   href="https://github.com/shum-dev"
@@ -450,6 +451,7 @@
               <li
                 title="UpWork"
                 class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                style="--order-lr: 1"
               >
                 <a
                   href="https://www.upwork.com/freelancers/~01816b23e1eddfb471"
@@ -466,6 +468,7 @@
               <li
                 title="LinkedIn"
                 class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                style="--order-lr: 2"
               >
                 <a
                   href="https://linkedin.com/in/shum-dev"
@@ -482,6 +485,7 @@
               <li
                 title="Telegram"
                 class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                style="--order-lr: 3"
               >
                 <a
                   href="https://t.me/shum_dev"
@@ -498,6 +502,7 @@
               <li
                 title="Email"
                 class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                style="--order-lr: 4"
               >
                 <a
                   href="mailto:egor@shum.dev"
@@ -547,10 +552,6 @@
         class="hidden-section container grid gap-8 max-w-prose"
       >
         <div>
-          <!-- <small
-            class="leading-normal tracking-widest text-accent uppercase drop-shadow-text-sm"
-            >Education</small
-          > -->
           <div class="flex gap-4">
             <small
               class="tracking-widest text-accent uppercase drop-shadow-text-sm leading-normal"
@@ -760,6 +761,7 @@
               <li
                 title="CV PDF"
                 class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                style="--order-lr: 0"
               >
                 <a
                   href="./public/CV-shum.pdf"
@@ -776,6 +778,7 @@
               <li
                 title="CV DOC"
                 class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                style="--order-lr: 1"
               >
                 <a
                   href="./public/CV-shum.docx"
