fix public resources links

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                 style="--order-lr: 0"
               >
                 <a
-                  href="./public/CV-shum.pdf"
+                  href="/CV-shum.pdf"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
                   class="text-accent hover:text-current transition block p-2 sm:p-4"
@@ -781,7 +781,7 @@
                 style="--order-lr: 1"
               >
                 <a
-                  href="./public/CV-shum.docx"
+                  href="/CV-shum.docx"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
                   class="text-accent hover:text-current transition block p-2 sm:p-4"
