improved animations exp and timing

--- a/index.html
+++ b/index.html
@@ -431,16 +431,12 @@
               aria-label="Contacts"
               class="flex justify-around gap-1 items-center"
             >
-              <li
-                title="Github"
-                class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
-                style="--order-lr: 0"
-              >
+              <li title="Github" class="hidden-lr group" style="--order-lr: 0">
                 <a
                   href="https://github.com/shum-dev"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
-                  class="text-accent hover:text-current transition block p-2 sm:p-4"
+                  class="text-accent bg-bkgSecondary rounded group-hover:text-current transition block p-2 sm:p-4 shadow-card-down group-hover:shadow-card-up group-hover:-translate-y-2"
                 >
                   <svg height="30" width="30" title="GIthubBBBB">
                     <use xlink:href="#i-github" />
@@ -448,16 +444,12 @@
                 </a>
               </li>
 
-              <li
-                title="UpWork"
-                class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
-                style="--order-lr: 1"
-              >
+              <li title="UpWork" class="hidden-lr group" style="--order-lr: 1">
                 <a
                   href="https://www.upwork.com/freelancers/~01816b23e1eddfb471"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
-                  class="text-accent hover:text-current transition block p-2 sm:p-4"
+                  class="text-accent bg-bkgSecondary rounded group-hover:text-current transition block p-2 sm:p-4 shadow-card-down group-hover:shadow-card-up group-hover:-translate-y-2"
                 >
                   <svg height="30" width="30" title="GIthubBBBB">
                     <use xlink:href="#i-upwork" />
@@ -467,14 +459,14 @@
 
               <li
                 title="LinkedIn"
-                class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                class="hidden-lr group"
                 style="--order-lr: 2"
               >
                 <a
                   href="https://linkedin.com/in/shum-dev"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
-                  class="text-accent hover:text-current transition block p-2 sm:p-4"
+                  class="text-accent bg-bkgSecondary rounded group-hover:text-current transition block p-2 sm:p-4 shadow-card-down group-hover:shadow-card-up group-hover:-translate-y-2"
                 >
                   <svg height="30" width="30">
                     <use xlink:href="#i-linkedIn" />
@@ -484,14 +476,14 @@
 
               <li
                 title="Telegram"
-                class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
+                class="hidden-lr group"
                 style="--order-lr: 3"
               >
                 <a
                   href="https://t.me/shum_dev"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
-                  class="text-accent hover:text-current transition block p-2 sm:p-4"
+                  class="text-accent bg-bkgSecondary rounded group-hover:text-current transition block p-2 sm:p-4 shadow-card-down group-hover:shadow-card-up group-hover:-translate-y-2"
                 >
                   <svg height="30" width="30">
                     <use xlink:href="#i-telegram" />
@@ -499,16 +491,12 @@
                 </a>
               </li>
 
-              <li
-                title="Email"
-                class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
-                style="--order-lr: 4"
-              >
+              <li title="Email" class="hidden-lr group" style="--order-lr: 4">
                 <a
                   href="mailto:egor@shum.dev"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
-                  class="text-accent hover:text-current transition block p-2 sm:p-4"
+                  class="text-accent bg-bkgSecondary rounded group-hover:text-current transition block p-2 sm:p-4 shadow-card-down group-hover:shadow-card-up group-hover:-translate-y-2"
                 >
                   <svg height="30" width="30">
                     <use xlink:href="#i-email" />
@@ -527,6 +515,8 @@
                 class="rounded object-cover w-full max-w-xs mx-auto"
                 src="./images/shum_ava.webp"
                 alt="Egor's Photo"
+                width="320"
+                height="427"
               />
             </div>
 
@@ -758,16 +748,12 @@
               aria-label="CV downloads"
               class="flex justify-around gap-1 items-center sm:gap-4"
             >
-              <li
-                title="CV PDF"
-                class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
-                style="--order-lr: 0"
-              >
+              <li title="CV PDF" class="hidden-lr group" style="--order-lr: 2">
                 <a
                   href="/CV-shum.pdf"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
-                  class="text-accent hover:text-current transition block p-2 sm:p-4"
+                  class="text-accent bg-bkgSecondary rounded group-hover:text-current transition block p-2 sm:p-4 shadow-card-down group-hover:shadow-card-up group-hover:-translate-y-2"
                 >
                   <svg height="30" width="30" title="GIthubBBBB">
                     <use xlink:href="#i-pdf-file" />
@@ -775,16 +761,12 @@
                 </a>
               </li>
 
-              <li
-                title="CV DOC"
-                class="hidden-lr bg-bkgSecondary rounded overflow-hidden shadow-card-down"
-                style="--order-lr: 1"
-              >
+              <li title="CV DOC" class="hidden-lr group" style="--order-lr: 3">
                 <a
                   href="/CV-shum.docx"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
-                  class="text-accent hover:text-current transition block p-2 sm:p-4"
+                  class="text-accent bg-bkgSecondary rounded group-hover:text-current transition block p-2 sm:p-4 shadow-card-down group-hover:shadow-card-up group-hover:-translate-y-2"
                 >
                   <svg height="30" width="30" title="GIthubBBBB">
                     <use xlink:href="#i-doc-file" />
