fix datarockets link

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
           <div class="grid group self-center justify-center">
             <div
-              class="min-h-[292px] col-span-full row-span-full place-self-center"
+              class="col-span-full row-span-full place-self-center"
             >
               <img
                 loading="lazy"
@@ -979,7 +979,7 @@
               <h3 class="text-xl font-medium whitespace-nowrap tracking-wide">
                 @
                 <a
-                  href="https://www.epam.com/"
+                  href="https://datarockets.com/"
                   rel="noopener noreferrer nofollow"
                   target="_blank"
                   class="decoration-accent underline hover:text-accent transition underline-offset-8 decoration-1"
