add Mobx and Cypress to the tech arsenal

--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,7 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">Markup & Styles</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">HTML</li>
               <li class="text-muted drop-shadow-text-sm">
@@ -1071,11 +1072,22 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">JavaScript</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">ES6, ES7 ... ES11</li>
               <li class="text-muted drop-shadow-text-sm">Vanilla JS</li>
               <li class="text-muted drop-shadow-text-sm">jQuery</li>
               <li class="text-muted drop-shadow-text-sm">RxJS</li>
+              <li class="text-muted drop-shadow-text-sm">
+                Redux + Redux Toolkit
+              </li>
+              <li class="text-muted drop-shadow-text-sm">Redux-observables</li>
+              <li class="text-muted drop-shadow-text-sm">
+                Typing: Flow, Typescript
+              </li>
+              <li class="text-muted drop-shadow-text-sm">
+                Mobx
+              </li>
             </ul>
           </li>
 
@@ -1088,13 +1100,7 @@
                 Modern Concepts (Hooks, Context ...)
               </li>
               <li class="text-muted drop-shadow-text-sm">Next.js</li>
-              <li class="text-muted drop-shadow-text-sm">
-                Redux + Redux Toolkit
-              </li>
-              <li class="text-muted drop-shadow-text-sm">Redux-observables</li>
-              <li class="text-muted drop-shadow-text-sm">
-                Typing: Flow, Typescript
-              </li>
+
               <li class="text-muted drop-shadow-text-sm">Relay</li>
               <li class="text-muted drop-shadow-text-sm">ReactQuery</li>
             </ul>
@@ -1104,13 +1110,13 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">Backend</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">Node.js</li>
               <li class="text-muted drop-shadow-text-sm">Express</li>
               <li class="text-muted drop-shadow-text-sm">MongoDB</li>
               <li class="text-muted drop-shadow-text-sm">MySQL</li>
               <li class="text-muted drop-shadow-text-sm">GraphQL</li>
-              <li class="text-muted drop-shadow-text-sm">Nginx</li>
             </ul>
           </li>
 
@@ -1118,11 +1124,13 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">Other related</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">Webpack</li>
               <li class="text-muted drop-shadow-text-sm">D3</li>
               <li class="text-muted drop-shadow-text-sm">Git</li>
               <li class="text-muted drop-shadow-text-sm">Docker</li>
+              <li class="text-muted drop-shadow-text-sm">Nginx</li>
             </ul>
           </li>
 
@@ -1130,12 +1138,14 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">Testing</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">Jasmine</li>
               <li class="text-muted drop-shadow-text-sm">Jest</li>
               <li class="text-muted drop-shadow-text-sm">Enzyme</li>
               <li class="text-muted drop-shadow-text-sm">Mocha</li>
               <li class="text-muted drop-shadow-text-sm">Testing Library</li>
+              <li class="text-muted drop-shadow-text-sm">Cypress</li>
             </ul>
           </li>
 
@@ -1143,6 +1153,7 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">Science</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">
                 Algorithms and Data Structures
@@ -1158,6 +1169,7 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">Communications</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">WebRTC</li>
               <li class="text-muted drop-shadow-text-sm">WebSockets</li>
@@ -1169,6 +1181,7 @@
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
             <h5 class="text-xl font-medium tracking-wide">Blockchain App</h5>
+
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">Solidity</li>
               <li class="text-muted drop-shadow-text-sm">Web3</li>
@@ -1695,7 +1708,7 @@
             <hr class="grow border-t-bkgSecondary border-t-2 self-center" />
           </div>
           <h2
-            class="text-3xl leading-normal font-bold tracking-wide drop-shadow-text-md"
+            class="text-xl font-medium tracking-wide"
           >
             If you know my story, You know me
           </h2>
