Fix observer margins

--- a/index.html
+++ b/index.html
@@ -507,9 +507,7 @@
           </div>
 
           <div class="grid group self-center justify-center">
-            <div
-              class="col-span-full row-span-full place-self-center"
-            >
+            <div class="col-span-full row-span-full place-self-center">
               <img
                 loading="lazy"
                 class="rounded object-cover w-full max-w-xs mx-auto"
@@ -1055,11 +1053,9 @@
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">HTML</li>
               <li class="text-muted drop-shadow-text-sm">
-                CSS, LESS, SESS, PostCSS
+                CSS, LESS, SASS, PostCSS
               </li>
               <li class="text-muted drop-shadow-text-sm">jSS(CSS-in-JS)</li>
-              <li class="text-muted drop-shadow-text-sm">UIKit</li>
-              <li class="text-muted drop-shadow-text-sm">SemanticUI</li>
               <li class="text-muted drop-shadow-text-sm">Tailwind</li>
               <li class="text-muted drop-shadow-text-sm">MaterialUI</li>
               <li class="text-muted drop-shadow-text-sm">Ant Design</li>
@@ -1085,9 +1081,7 @@
               <li class="text-muted drop-shadow-text-sm">
                 Typing: Flow, Typescript
               </li>
-              <li class="text-muted drop-shadow-text-sm">
-                Mobx
-              </li>
+              <li class="text-muted drop-shadow-text-sm">Mobx</li>
             </ul>
           </li>
 
@@ -1127,7 +1121,9 @@
 
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">Webpack</li>
+              <li class="text-muted drop-shadow-text-sm">Rollup</li>
               <li class="text-muted drop-shadow-text-sm">D3</li>
+              <!-- TODO add GSAP -->
               <li class="text-muted drop-shadow-text-sm">Git</li>
               <li class="text-muted drop-shadow-text-sm">Docker</li>
               <li class="text-muted drop-shadow-text-sm">Nginx</li>
@@ -1137,15 +1133,13 @@
           <li
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
-            <h5 class="text-xl font-medium tracking-wide">Testing</h5>
+            <h5 class="text-xl font-medium tracking-wide">Testing & Documentation</h5>
 
             <ul class="text-left list-disc list-inside marker:text-accent">
-              <li class="text-muted drop-shadow-text-sm">Jasmine</li>
               <li class="text-muted drop-shadow-text-sm">Jest</li>
-              <li class="text-muted drop-shadow-text-sm">Enzyme</li>
               <li class="text-muted drop-shadow-text-sm">Mocha</li>
-              <li class="text-muted drop-shadow-text-sm">Testing Library</li>
               <li class="text-muted drop-shadow-text-sm">Cypress</li>
+              <li class="text-muted drop-shadow-text-sm">Storybook</li>
             </ul>
           </li>
 
@@ -1707,9 +1701,7 @@
             >
             <hr class="grow border-t-bkgSecondary border-t-2 self-center" />
           </div>
-          <h2
-            class="text-xl font-medium tracking-wide"
-          >
+          <h2 class="text-xl font-medium tracking-wide">
             If you know my story, You know me
           </h2>
         </div>
