--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,9 @@
           <li
             class="rounded shadow-card-down hover:shadow-card-up hover:-translate-y-2 max-w-sm sm:max-w-none w-full bg-bkgSecondary transition flex flex-col gap-4 p-4"
           >
-            <h5 class="text-xl font-medium tracking-wide">Testing & Documentation</h5>
+            <h5 class="text-xl font-medium tracking-wide">
+              Testing & Documentation
+            </h5>
 
             <ul class="text-left list-disc list-inside marker:text-accent">
               <li class="text-muted drop-shadow-text-sm">Jest</li>
