--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="shortcut icon"
       type="image/svg+xml"
-      href="./images/shum-logo-1.svg"
+      href="/assets/shum-logo-1.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://shum.dev/" />
     <meta
       property="og:image"
-      content="https://shum.dev/assets/og-shum-dev.png"
+      content="/assets/og-shum-dev.png"
     />
     <meta
       property="og:description"
@@ -41,7 +41,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://shum.dev/assets/og-shum-dev.png"
+      content="/assets/og-shum-dev.png"
     />
     <meta name="twitter:image:alt" content="Welcome screen of Egor's website" />
     <meta name="twitter:card" content="summary_large_image" />
